<?xml version="1.0"?>
<package format="3">
  <name>dora2filter</name>
  <version>0.1.0</version>
  <description>
    A laser_filters plugin that removes points aligned with the midpoint direction between adjacent beams.
  </description>

  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>filters</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
